--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "libs/http-parser"]
 	path = libs/http-parser
 	url = https://github.com/nodejs/http-parser
-	ignore = all
+	ignore = dirty
